24117 - Word wrap fix

--- a/css/main.css
+++ b/css/main.css
@@ -1011,7 +1011,7 @@ html.ie8, .ie8 body, .ie8 .application-wrapper {
 .course-intro-text {
     font-size: 16px;
     overflow-x: auto;
-    word-break: break-all;
+    word-wrap: break-word;
 }
 
     .course-intro-text:first-child {
